@@ -41,7 +41,7 @@ class UcAddressesOrderTestCase extends UbercartOrderTestCase {
    * have a bit different name.
    * Example:
    * Instead of "billing_first_name",
-   * Ubercart Addresses uses "billing[address][billing_first_name]".
+   * Ubercart Addresses uses "bill_to[address][billing_first_name]".
    * This is done to fix issues with the zone field.
    */
   public function testOrderEditing() {
@@ -62,13 +62,13 @@ class UcAddressesOrderTestCase extends UbercartOrderTestCase {
     $this->assertText(drupal_strtoupper($order->billing_first_name . ' ' . $order->billing_last_name), 'Found customer name.');
 
     $edit = array(
-      'billing[address][billing_first_name]' => $this->randomName(8),
-      'billing[address][billing_last_name]' => $this->randomName(15),
+      'bill_to[address][billing_first_name]' => $this->randomName(8),
+      'bill_to[address][billing_last_name]' => $this->randomName(15),
     );
     $this->drupalPost('admin/store/orders/' . $order->order_id . '/edit', $edit, t('Submit changes'));
     $this->assertText(t('Order changes saved.'));
-    $this->assertFieldByName('billing[address][billing_first_name]', $edit['billing[address][billing_first_name]'], 'Billing first name changed.');
-    $this->assertFieldByName('billing[address][billing_last_name]', $edit['billing[address][billing_last_name]'], 'Billing last name changed.');
+    $this->assertFieldByName('bill_to[address][billing_first_name]', $edit['bill_to[address][billing_first_name]'], 'Billing first name changed.');
+    $this->assertFieldByName('bill_to[address][billing_last_name]', $edit['bill_to[address][billing_last_name]'], 'Billing last name changed.');
   }
 
   /**
