@@ -105,3 +105,14 @@
   display: inline;
 }
 /* @end */
+
+/* @group Order admin */
+form input.uc-addresses-button {
+  cursor: pointer;
+  font-size: 0.8em;
+  font-weight: normal;
+  margin-bottom: 1em;
+  padding: 2px;
+  text-align: center;
+}
+/* @end */
